--- a/styleshett.css
+++ b/styleshett.css
@@ -50,7 +50,7 @@ body {
   }
 
   .button.yes {
-    background-color: #f9725a; /* Red */
+    background-color: #f9725a; 
     color: white;
   }
 
