--- a/netlify.css
+++ b/netlify.css
@@ -1,5 +1,5 @@
 *{
-    margin: 0%;
+    margin: 0;
     padding: 0;
 }
 
@@ -29,15 +29,73 @@
     
 }
 
-.img1{
-    border: 1px solid black;
-    padding: 2px;
-    margin: 2px;
-    border-radius: 8;
+.content{
+    display:flex ;
+    gap: 35px;
+    border: 2px solid black;
     text-align: center;
+    font-family: sans-serif;
+    
+  
+}
+.images{
+
+    border: 2px solid black;
+    overflow: hidden;
+    text-align: center;
+    border-radius: 8px;
+    padding: 10px;
+    margin-top: 30x;
+    
+
 }
 
-.images {
-    display: flex;
+.images img {
+
+    max-width: 100%;
+    height: auto;
+    border-bottom: 1px solid #ddd;
+    margin-bottom: 10px;
 }
+
+.images h2{
+    font-size: 18px;
+    margin: auto;
+}
+
+.images p{
+    font-size: 16px;
+    margin: 5px 0;
+    color: #555
+}
+
+.images button{
+    border: 1px solid black;
+    background-color: green;
+    padding: 10px 15px;
+    border-radius: 100px;
+    cursor: pointer;
+    font-size: 16px;
+    margin-top: 10px;
+}
+
+.images button:hover{
+    color: red;
+    background-color: white;
+}
+
+
+.bottom{
+
+    background-color: #555;
+    font-size: 9px ;
+    text-align: center;
+    justify-content: center;
+    padding: 70px;
+   
+}
+
+
+
+
 
