--- a/styleshett.css
+++ b/styleshett.css
@@ -37,23 +37,38 @@ body {
 
   .modal-buttons {
     display: flex;
-    gap: 10px;
+    justify-content: center;
+    width: 40px;
+    /* gap: 20px; */
+    height: 51px;
+   width: 180px;
+    
   }
 
-  .button {
-    width: 80px;
-    padding: 10px;
-    border-radius: 5px;
-    text-align: center;
-    cursor: pointer;
-    font-weight: bold;
+  .gap{
+    height: 51px;
+    width: 180px;
+   border: 2px red solid;
   }
 
-  .button-yes {
-    background-color: #f9725a; 
-    color: white;
-    display: flex;
-    padding: 2px 3px 4px 5px;
+  .gap:nth-child(1){
+    
+    background-color: red;
+
+
+
+    
   }
+  .gap:nth-child(2){
+    
+    background-color: yellow;
+
+
+
+    
+  }
+
+ 
+  
 
   
