--- a/newgridbox.css
+++ b/newgridbox.css
@@ -12,6 +12,7 @@
     grid-template-rows: 100px auto 100px;
     text-align: center;
     gap: 10px;
+    border-radius: 20px;
 
     
     
@@ -33,14 +34,14 @@
 .menu{
 
 grid-column-start: 1 ;
-grid-column-end: 3;
+grid-column-end: 4;
 background-color: aqua;
 
 
 }
 .bodi{
-    grid-column-start:1 ;
-    grid-column-end: 3;
+    grid-column-start:4 ;
+    grid-column-end: -1;
     background-color: skyblue;
 }
 .footer{
