--- a/complexgrid.css
+++ b/complexgrid.css
@@ -9,7 +9,7 @@
     height: 100vh;
     display: grid;
     grid-template-columns:repeat(12,1fr) ;
-    grid-template-rows: 100px auto 100px;
+    grid-template-rows: 100px auto auto 100px;
     text-align: center;
     gap: 10px;
     border-radius: 20px;
@@ -36,14 +36,34 @@
 grid-column-start: 1 ;
 grid-column-end: 4;
 background-color: aqua;
+grid-row-start: 2;
+grid-row-end: 4;
 
 
 }
 .bodi{
     grid-column-start:4 ;
+    grid-column-end:8 ;
+    background-color: skyblue;
+}
+.bodi1{
+    grid-column-start:8 ;
     grid-column-end: -1;
     background-color: skyblue;
 }
+.bodi2{
+    grid-column-start:4 ;
+    grid-column-end: 8;
+    background-color: skyblue;
+}
+.bodi3{
+    grid-column-start:8 ;
+    grid-column-end: -1;
+    background-color: skyblue;
+}
+
+
+
 .footer{
     grid-column-start: 1;
     grid-column-end: -1;
