--- a/grid.css
+++ b/grid.css
@@ -7,10 +7,10 @@
 .container{
     display: grid;
     grid-template-columns: repeat(12,1fr);
-    grid-template-rows:100px auto 100px auto ;
+    grid-template-rows:100px 100px 200px 100px 500px auto ;
     border-radius: 20px;
     height: 100vh;
-    gap: 10px;
+    /* gap: 10px; */
     text-align: center;
 
 
@@ -26,15 +26,59 @@
 
 
 .num1{
-    grid-column: 1/6;
+    grid-column: 1/7;
     
     background-color: blue;
 }
 .num2{
-    grid-column: 6/-1;
+    grid-column: 7/-1;
     
     background-color: blue;
 }
+.num3{
+    grid-column: 1/7;
+    
+    background-color: blue;
+}
+.num4{
+    grid-column: 7/-1;
+    
+    background-color: blue;
+}
+.num5{
+    grid-column: 1/4;
+    
+    background-color: blue;
+}
+.num6{
+    grid-column: 4/7;
+    
+    background-color: blue;
+}
+
+.num7{
+    grid-column:1/-1 ;
+    
+    background-color: blue;
+}
+
+.num8{
+    grid-column: 1/-1;
+    background-color: yellow;
+}
+.num9{
+    grid-column:8/11 ;
+    background-color: yellow;
+}
+.num10{
+    grid-column:8/11 ;
+    background-color: yellow;
+}
+.num11{
+    grid-column:8/11 ;
+    background-color: yellow;
+}
+
 
 
 
